add font / product

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -8,6 +8,7 @@ $blue: #82b8ec;
 
 $alegreya : 'AlegreyaSans';
 $roboto: 'RobotoMono'; 
+$roboto-light: 'RobotoMonoLight';
 $unna: 'Unna';
 @mixin title {
     font-family: RobotoMono;
