--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -295,6 +295,14 @@ textarea {
 }
 
 @font-face {
+    font-family: RobotoMonoLight;
+    src: url(../fonts/RobotoMono-Light.ttf) format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
     font-family: 'icomoon';
     src: url('../fonts/icomoon.eot');
     src: url('../fonts/icomoon.eot') format('embedded-opentype'), url('../fonts/icomoon.ttf') format('truetype'), url('../fonts/icomoon.woff') format('woff'), url('../fonts/icomoon.svg') format('svg');
