--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -24,6 +24,20 @@
 
                     margin-bottom: 30px;
                 }
+                > div {
+                    .product-information {
+                        .product-actions {
+                            .product-add-to-cart {
+                                .product-quantity {
+                                    flex-direction: column;
+                                    .add-to-cart {
+                                        border-radius: 25px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
 
                 .info-detailed {
                     @media screen and (min-width: 1024px) {
@@ -316,7 +330,7 @@
             &.nut {
                 width: 50%;
 
-                @media screen and (max-width: 767px) {
+                @media screen and (max-width: 1024px) {
                     width: 100%;
                 }
             }
@@ -409,7 +423,7 @@
         padding-left: 20px;
         width: 60%;
 
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 1024px) {
             width: 100%;
         }
 
@@ -454,7 +468,7 @@
 
     .text-info {
         color: $black;
-        font-family: $roboto;
+        font-family: $roboto-light;
         font-size: 13px;
         line-height: 17px;
     }
