--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -133,6 +133,25 @@
                     }
                 }
             }
+
+            .footer_information {
+                .titre {
+                    font-family: $unna;
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+                div {
+                    p {
+                        span {
+                            display: block;
+                        }
+                    }
+
+                    .coordonnes {
+                        margin-bottom: 0;
+                    }
+                }
+            }
         }
     }
     .blockreassurance {
