--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -5,7 +5,6 @@
 #header .logo {
     width: 400px;
     height: 120.75px;
-
     // @media (max-width: 480px) {
     //     max-width: 240px;
     //     max-height: 72.453px;
@@ -61,23 +60,21 @@
                         position: absolute;
                         right: 0;
                         top: -35px;
-
                         #_desktop-user_info {
                             .user-info {
                                 margin-top: 0;
                                 padding: .75rem;
                             }
                         }
-
                         #_desktop_cart {
                             .header {
                                 margin-top: 0;
-
                                 .hidden-sm-down {
                                     font-size: 12px;
                                 }
                                 .cart-products-count {
-                                    font-size: 12px;;
+                                    font-size: 12px;
+                                    ;
                                 }
                             }
                         }
@@ -91,7 +88,6 @@
                         position: absolute;
                         top: -95px;
                         right: 30%;
-                        display: none;
                     }
                 }
                 #_desktop_top_menu {
@@ -103,7 +99,6 @@
                         li {
                             font-family: 'AlegreyaSans';
                             font-size: 16px;
-
                             &:not(:last-child) {
                                 margin-right: 10px;
                                 display: block;
@@ -117,7 +112,6 @@
                                 font-size: 16px;
                                 cursor: pointer;
                             }
-
                             &.current#category-79 {
                                 a {
                                     color: #f9992f;
@@ -125,12 +119,12 @@
                             }
                             &.current#category-78 {
                                 a {
-                                    color:#ff3e39;
+                                    color: #ff3e39;
                                 }
                             }
                             &.current#category-80 {
                                 a {
-                                    color:#647b3f ;
+                                    color: #647b3f;
                                 }
                             }
                             &.current#category-40 {
@@ -172,13 +166,12 @@
                         position: absolute;
                         right: 0;
                         top: 65px;
-
                         #_desktop_cart {
                             .cart-preview.active {
                                 background: $white;
                                 a {
                                     color: $black;
-                                } 
+                                }
                             }
                         }
                     }
@@ -213,12 +206,6 @@
                                 }
                             }
                         }
-                    }
-                }
-                .header-bottom {
-                    width: 100%;
-                    .search-widget {
-                        display: none;
                     }
                 }
             }
