--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -5,7 +5,6 @@
         .row {
             .home_popup {
                 display: none;
-
                 #list-builder {
                     opacity: 0.5;
                 }
@@ -47,12 +46,10 @@
                             margin-top: 20px!important;
                             padding-left: 0;
                             padding-right: 30px;
-
                             @media (max-width: 769px) {
                                 padding-left: 15px;
                                 padding-right: 15px;
                             }
-
                             .popup-logo {
                                 img {
                                     width: 200px;
@@ -62,7 +59,6 @@
                             }
                             .description {
                                 margin-top: 20px!important;
-
                                 @media (max-width: 769px) {
                                     text-align: center;
                                     margin-top: 20px;
@@ -79,9 +75,7 @@
                                 }
                             }
                             .form-group {
-
                                 margin-bottom: 0;
-                                
                                 input {
                                     border-bottom: 1px solid black;
                                     border-left: none;
@@ -89,11 +83,9 @@
                                     border-top: none;
                                     background: $white;
                                 }
-
                                 .form-control:focus {
                                     outline: none;
                                 }
-
                                 &:nth-child(2) {
                                     display: none;
                                 }
@@ -102,7 +94,7 @@
                                         width: auto;
                                     }
                                 }
-                                > div {
+                                >div {
                                     width: 90%;
                                     margin: 0 auto;
                                     display: block;
@@ -110,8 +102,7 @@
                                 }
                             }
                             .btn-primary {
-                                margin-top: 2rem; 
-
+                                margin-top: 2rem;
                                 @media (max-width: 769px) {
                                     width: 100%;
                                     display: block!important;
@@ -153,6 +144,22 @@
                 }
             }
         }
+        .container {
+            position: relative;
+            @media (min-width: 768px) {
+                .right-block {
+                    padding-left: 2rem;
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                }
+            }
+        }
+        .block-title {
+            font-family: 'Unna';
+            font-size: 20px;
+            margin-bottom: 1rem;
+        }
     }
     .blockreassurance {
         @media (max-width: 480px) {
@@ -169,7 +176,6 @@
                         }
                     }
                 }
-
                 &:nth-child(1) {
                     img {
                         width: 52px;
@@ -188,7 +194,6 @@
             font-style: italic;
             font-family: 'AlegreyaSans';
             font-size: 12px;
-
             @media (max-width: 480px) {
                 margin-left: 20px;
                 margin-top: 0;
@@ -206,16 +211,7 @@
                 }
             }
             .row {
-                p {
-                    @media (min-width: 1200px) {
-                        padding-left: 0;
-                    }
-                }
                 >div {
-                    padding-left: 0;
-                    @media (max-width: 480px) {
-                        padding-left: 15px;
-                    }
                     form {
                         .row {
                             margin-left: 0;
@@ -236,12 +232,18 @@
     .row {
         .text-sm-center {
             margin-top: 50px;
+            text-align: center;
             @media (max-width: 992px) {
                 margin-top: 20px;
             }
             a {
-                display: block;
-                text-align: center;
+                display: inline-block;
+                padding-left: 1rem;
+            }
+            @media (max-width: 480px) {
+                a {
+                    display: block;
+                }
             }
         }
     }
