--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -2,6 +2,8 @@
 
 #wrapper {
     padding-top: 0;
+    width: 1190px;
+    margin: 0 auto;
     .container {
         .page-home {
             #custom-text {
