--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -1010,7 +1010,7 @@ pre code {
     clear: both
 }
 
-@media (min-width:576px) {
+/* @media (min-width:576px) {
     .container {
         width: 540px;
         max-width: 100%
@@ -1036,7 +1036,7 @@ pre code {
         width: 1140px;
         max-width: 100%
     }
-}
+} */
 
 .container-fluid {
     margin-left: auto;
